# csvsharehub

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml
backend/: .env.example  Cargo.toml  resultados.csv
backend/src/: endpoint.rs  main.rs
backend/src/tests/: mod.rs
frontend/: .env.example  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  Details.js  index.js  styles.css
migrations/2024-11-02-155326_setup/: up.sql
migrations/2024-11-03-184911_create_files/: up.sql
src/: endpoint.rs  main.rs  models.rs  schema.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
