[package]
name = "csvsharehub"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.6"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive", "env"] }
diesel = { version = "2.1", features = ["sqlite", "r2d2", "chrono"] }
diesel_migrations = "2.1"
dotenv = "0.15"
env_logger = "0.10"
futures-util = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
bytes = "1.0"